hydroflow/tests/compile-fail/surface_port_join_forwardref.stderr
error: Unexpected input port. Expected one of: `0`, `1`
 --> tests/compile-fail/surface_port_join_forwardref.rs:5:42
  |
5 |         source_iter([(1, 1), (2, 2)]) -> j;
  |                                          ^

error: Unexpected input port. Expected one of: `0`, `1`
 --> tests/compile-fail/surface_port_join_forwardref.rs:6:42
  |
6 |         source_iter([(3, 3), (4, 4)]) -> j;
  |                                          ^

error: Missing expected input port(s): `0`, `1`.
 --> tests/compile-fail/surface_port_join_forwardref.rs:7:13
  |
7 |         j = join() -> for_each(std::mem::drop);
  |             ^^^^^^
